--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Prime Music",
-  "version": "1.0",
+  "name": "AurA v3",
+  "version": "3.0",
   "description": "Music Bot",
   "main": "index.js",
   "dependencies": {
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "GlaceYT",
+  "author": "dynin99",
   "license": "XX",
   "engines": {
     "node": "20.x"
